# sor-process-simulation-cpp

./: .gitignore  README.md
docs/: api.md
sor-simulation/: CMakeLists.txt  config.cfg
sor-simulation/include/: director.hpp
sor-simulation/include/ipc/: message_queue.hpp  semaphore.hpp  shared_memory.hpp  signals.hpp
sor-simulation/include/logging/: logger.hpp
sor-simulation/include/model/: config.hpp  events.hpp  patient.hpp  shared_state.hpp  types.hpp
sor-simulation/include/roles/: patient.hpp  patient_generator.hpp  registration.hpp  specialist.hpp  triage.hpp
sor-simulation/include/util/: error.hpp  random.hpp
sor-simulation/include/visualization/: log_parser.hpp  render_utils.hpp  renderer.hpp  state.hpp  visualizer.hpp
sor-simulation/src/: director.cpp  main.cpp
sor-simulation/src/ipc/: message_queue.cpp  semaphore.cpp  shared_memory.cpp  signals.cpp
sor-simulation/src/logging/: logger.cpp
sor-simulation/src/roles/: patient.cpp  patient_generator.cpp  registration.cpp  specialist.cpp  triage.cpp
sor-simulation/src/util/: error.cpp  random.cpp
sor-simulation/src/visualization/: log_parser.cpp  render_utils.cpp  renderer.cpp  state.cpp  visualizer.cpp
